--- a/FRONT/STATIQUE/HTML/phase01.html
+++ b/FRONT/STATIQUE/HTML/phase01.html
@@ -9,7 +9,7 @@
     <p>Le langage HTML, c'est fantastique.</p> 
     <hr>
     <p>lol</p><br>
-    <p>lol</p>
+    <p>lol</p><br>
     <h6>lol</h6>
     </body>
 </html>
