--- a/FRONT/STATIQUE/BOOTSTRAP/index.html
+++ b/FRONT/STATIQUE/BOOTSTRAP/index.html
@@ -10,8 +10,8 @@
 <body>
     <header>
         <div class="container-fluid d-flex justify-content-between align-items-center">
-            <div><img src="assets\img\jarditou_html_zip\images\jarditou_logo.jpg" class="" alt="Logo Jarditou" title="Logo Jarditou"></div>
-            <p class="fs-2">Tout le jardin</p>
+            <div><img src="assets\img\jarditou_html_zip\images\jarditou_logo.jpg" class="img-fluid w-25" alt="Logo Jarditou" title="Logo Jarditou"></div>
+            <p class="fs-2 p-2">Tout le jardin</p>
         </div>
         <nav class="container-fluid d-flex justify-content-between p-3 align-items-center bg-light">
             <div>
@@ -24,8 +24,8 @@
         </nav>
         <img src="assets\img\jarditou_html_zip\images\promotion.jpg" class="container-fluid" alt="Promotion Jarditou" title="Promotion Jarditou"><br>
     </header>
-            <div class="accueil">
-                <div class="box">
+            <div class="container-fluid d-flex flex-wrap mb-3">
+                <div class="p-4 col-lg-8 col-md-12 col-sm-12 col-12">
                         <article>
                         <h2>L'entreprise</h2>
                         <p>Notre entreprise familiale met tout son savoir-faire à votre disposition dans le domaine du jardin et du paysagisme.</p>
@@ -38,13 +38,13 @@
                         <p>Vous pouvez bien sûr contacter pour de plus amples informations ou pour une demande d’intervention. Vous souhaitez un devis ? Nous vous le réalisons gratuitement.</p>
                         </article>
                 </div>
-                <div class="box" id="box2">[COLONNE DROITE]</div>
+                <div class="bg-warning col-lg-4 col-md-12 col-sm-12 col-12 text-center pt-1 fs-1">[Colonne de droite]</div>
             </div>
-    <footer>
-        <div id="lienfooter">
-            <a href="mention_légales.html" class="lien1" title="Ouvrir Mention légales">Mention légales</a>
-            <a href="horaires.html" class="lien2" title="Ouvrir Horaires">Horaires</a>
-            <a href="plan_du_site.html" class="lien3" title="Ouvrir Plan du site">Plan du site</a>
+    <footer class="container-fluid bg-dark p-3">
+        <div class="d-flex">
+            <a href="mention_légales.html" class="text-secondary ms-2 me-2" title="Ouvrir Mention légales">Mention légales</a>
+            <a href="horaires.html" class="text-secondary ms-2 me-2" title="Ouvrir Horaires">Horaires</a>
+            <a href="plan_du_site.html" class="text-secondary ms-2 me-2" title="Ouvrir Plan du site">Plan du site</a>
         </div>
     </footer>
 </body>
