--- a/FRONT/STATIQUE/BOOTSTRAP/index.html
+++ b/FRONT/STATIQUE/BOOTSTRAP/index.html
@@ -9,16 +9,20 @@
 </head>
 <body>
     <header>
-        <div class="container-fluid d-flex justify-content-between align-items-center">
+        <div class="container-fluid d-flex align-items-center">
             <div class="col-lg-9 col-8 col-sm-8 col-md-8"><img src="assets\img\jarditou_html_zip\images\jarditou_logo.jpg" class="img-fluid w-25" alt="Logo Jarditou" title="Logo Jarditou"></div>
             <p class="fs-2 col-lg-3 col-4 col-sm-4 col-md-4 d-flex justify-content-end align-items-center">Tout le jardin</p>
         </div>
         <nav class="navbar bg-body-tertiary">
             <div class="d-flex justify-content-between p-3 align-items-center bg-light">
+                <div>
             <a class="text-black fs-5 ms-2 me-2" href="">Jarditou.com</a>
+                </div>
+                <div>
             <a class="text-body-tertiary ms-1 me-1" href="index.html" class="lien1" title="Ouvrir Accueil">Accueil</a>
             <a class="text-body-tertiary ms-1 me-1" href="tableau.html" class="lien2" title="Ouvrir Tableau">Tableau</a>
             <a class="text-body-tertiary ms-1 me-1" href="contact.html" class="lien3" title="Ouvrir Contact">Contact</a>
+                </div>
             </div>
             <div><input type="text" placeholder="Votre promotion"><button type="submit" class="btn-sm ms-2 me-2 btn btn-outline-success">Rechercher</button></div>
         </nav>
