--- a/FRONT/DYNAMIQUE/JAVASCRIPT/js_08.html
+++ b/FRONT/DYNAMIQUE/JAVASCRIPT/js_08.html
@@ -8,7 +8,7 @@
 <body>
     
 
-    <script src="C:\Users\rubis\OneDrive\Bureau\MS-DIW-2-Aur-lien\FRONT\DYNAMIQUE\JAVASCRIPT\js_08.js"></script>
+    <script src="\FRONT\DYNAMIQUE\JAVASCRIPT\js_08.js"></script>
 
 </body>
 </html>
