--- a/FRONT/DYNAMIQUE/JAVASCRIPT/js_09.html
+++ b/FRONT/DYNAMIQUE/JAVASCRIPT/js_09.html
@@ -8,7 +8,7 @@
 <body>
     
     <section>
-        <img src="/FRONT/DYNAMIQUE/JAVASCRIPT/papillon.jpg" alt="papillon">
+        <img src="/FRONT/DYNAMIQUE/JAVASCRIPT/papillon.jpg" alt="papillon" id="image">
     </section>
 
     <section>
