--- a/FRONT/DYNAMIQUE/JAVASCRIPT/contact.html
+++ b/FRONT/DYNAMIQUE/JAVASCRIPT/contact.html
@@ -11,20 +11,20 @@
     <p><b>* Ces zones sont obligatoires pour envoyer le formulaire.</b></p>
     <form action="" method="post" id="formjs16">
         <fieldset>
-        <label for="societe"><b>Société :</b></label><input type="text" name="societe" id="societe"><p>*</p><br>
+        <div><label for="societe"><b>Société :</b></label><input type="text" name="societe" id="societe"><p class="p">*</p></div><br>
         <span id="span1"></span><br>
-        <label for="contacter"><b>Personne à contacter :</b></label><input type="text" name="contacter" id="contacter"><p>*</p><br>
+        <div><label for="contacter"><b>Personne à contacter :</b></label><input type="text" name="contacter" id="contacter"><p class="p">*</p></div><br>
         <span id="span2"></span><br>
-        <label for="adresse"><b>Adresse de l'entreprise :</b></label><textarea name="adresse" id="adresse" cols="30" rows="3"></textarea><br>
-        <label for="codepostal"><b>Code Postal :</b></label><input type="number" name="codepostal" id="codepostal"><p>*</p><br>
+        <div><label for="adresse"><b>Adresse de l'entreprise :</b></label><textarea name="adresse" id="adresse" cols="30" rows="3"></textarea><p class="p"> </p></div><br>
+        <div><label for="codepostal"><b>Code Postal :</b></label><input type="number" name="codepostal" id="codepostal"><p class="p">*</p></div><br>
         <span id="span3"></span><br>
-        <label for="ville"><b>Ville :</b></label><input type="text" name="ville" id="ville"><p>*</p><br>
+        <div><label for="ville"><b>Ville :</b></label><input type="text" name="ville" id="ville"><p class="p">*</p></div><br>
         <span id="span4"></span><br>
-        <label for="email"><b>E-mail :</b></label><input type="email" name="email" id="email"><p>*</p><br>
+        <div><label for="email"><b>E-mail :</b></label><input type="email" name="email" id="email"><p class="p">*</p></div><br>
         <span id="span5"></span><br>
-        <label for="telephone"><b>Téléphone :</b></label><input type="number" name="telephone" id="telephone"><br>
-        <label for="environnement"><b>Sélectionnez l'environnement technique du projet :</b></label><br>
-        <select name="environnement" id="environnement">
+        <div><label for="telephone"><b>Téléphone :</b></label><input type="number" name="telephone" id="telephone"><p class="p"></p></div><br>
+        <div><label for="environnement"><b>Sélectionnez l'environnement technique du projet :</b></label></div><br>
+        <div><select name="environnement" id="environnement">
             <option value="" selected>Choisissez</option>
             <option value="access">Access</option>
             <option value="java">Java</option>
@@ -39,8 +39,9 @@
             <option value="sqlserver">SQL Server</option>
             <option value="oracle">Oracle</option>
             <option value="autres">Autres...</option>
-        </select><br><br>
-        <button type="submit" id="submit">Envoyer</button><button type="reset" id="reset">Effacer</button>
+        </select></div><br><br>
+        <section><button type="submit" id="submit">Envoyer</button><button type="reset" id="reset">Effacer</button>
+        </section>
         </fieldset>
     </form>
 
