--- a/FRONT/STATIQUE/CSS/animation.html
+++ b/FRONT/STATIQUE/CSS/animation.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/FRONT/STATIQUE/CSS/animation.css">
     <title>Document</title>
 </head>
 <body>
-<?php
-    require "bonjour.php";
-    ?>
+    <section id="ball"></section>
 </body>
 </html>
