--- a/FRONT/STATIQUE/CSS/animation.html
+++ b/FRONT/STATIQUE/CSS/animation.html
@@ -7,6 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <section id="ball"></section>
+    <section id="ball_red"></section>
+    <section id="ball_blue"></section>
+    <section id="ball_green"></section>
 </body>
 </html>
