--- a/FRONT/STATIQUE/HTML/phase08.html
+++ b/FRONT/STATIQUE/HTML/phase08.html
@@ -13,8 +13,8 @@
             <label for="name">Votre nom* : </label><input type="text" name="name" required><br>
             <label for="fname">Votre prénom* : </label><input type="text" name="fname" required><br>
             <label for="sexe">Sexe* : </label>
-            <input type="radio" name="féminin" value="féminin" required>Féminin
-            <input type="radio" name="masculin" value="masculin" required>Masculin<br>
+            <input type="radio" name="sexe" value="féminin" required>Féminin
+            <input type="radio" name="sexe" value="masculin" required>Masculin<br>
             <label for="naissance">Date de naissance* : </label><input type="date" name="date" required><br>
             <label for="codepostal">Code postal* : </label><input type="number" name="codepostal" required><br>
             <label for="adresse">Adresse : </label><input type="text" name="adresse"><br>
