--- a/FRONT/DYNAMIQUE/JAVASCRIPT/js_09.html
+++ b/FRONT/DYNAMIQUE/JAVASCRIPT/js_09.html
@@ -8,7 +8,7 @@
 <body>
     
     <section>
-        <img src="/FRONT/DYNAMIQUE/JAVASCRIPT/papillon.jpg" alt="papillon" id="image">
+        <img src="/FRONT/DYNAMIQUE/JAVASCRIPT/papillon.jpg" alt="papillon" id="image" onMouseOver="this.src=img.src;">
     </section>
 
     <section>
